--- a/Sizzlin'.html
+++ b/Sizzlin'.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Hot Restaruant</title>
   <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> 
+  <link rel="stylesheet" href="Sizzlin'.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -12,24 +13,19 @@
 <body>
 
   <div class="container">
-    <div class="jumbotron">
-      <h1 class="text-center">Sizzlin'</h1>
+    <div class="jumbotron"> 
+      <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span> Sizzlin'</h1>
       <h3 class="text-center"><strong>The hottest joint in town!</strong></h3>
       <hr>
-      <button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-plus"></span> Make your reservation</button>
-      <button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-plus"></span> View Tables</button>
+      <h4 class="text-center">
+      <button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
+      <button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make your reservation</button>
+      </h4>
     </div>
     <div class="row">
 
       <div class="col-lg-12">
 
-          <div class="panel-body">
-            <input type="text" id="view-tables" class="form-control">
-            <br>
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="glyphicon glyphicon-search"></span>Bamn!</button>
-            </div>
-          </div>
         </div>
 
         <div class="panel panel-default">
@@ -74,6 +70,9 @@
       });
     });
   </script>
-
+  <footer class="footer">
+    <div class="container">
+      <a href="/api/tables">API Table Link</a>
+      <a href="/api/waitlist">API Wait List</a>
 </body>
 </html>
